--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body class="page">
   <header class="header">
     <img src="./images/header/header-logo.svg" alt="Лого" class="header__logo">
-    <div>
-      <a href="#" class="header__lang-link header__lang-link_RU">Ru</a>
-      <a href="#" class="header__lang-link header__lang-link_EN">En</a>
+    <div class="header__lang-link">
+      <a href="#" class="header__lang-link header__lang-link_active header__lang-link_selected">Ru</a>
+      <a href="#" class="header__lang-link header__lang-link_active">En</a>
     </div>
   </header>
   <main>
@@ -25,135 +25,133 @@
     </section>
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
-      <blockquote class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
         провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная
         с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно
         без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
-        стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</blockquote>
-      <p class="intro__list">Часовых поясов <span class="intro__list intro__list_numb">11</span></p>
+        стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+      <p class="intro__list">Часовых поясов <span class="intro__list intro__span-accent">11</span></p>
       <p class="intro__list">Объектов природного наследия <span
-          class="intro__list intro__list_up-case">ЮНЕСКО</span><span class="intro__list intro__list_numb"> 12</span>
+          class="intro__list intro__list_up-case">ЮНЕСКО</span><span class="intro__list intro__span-accent"> 12</span>
       </p>
       <p class="intro__list">Объектов культурного наследия <span class="intro__list intro__list_up-case">ЮНЕСКО</span>
-        <span class="intro__list intro__list_numb">16</span>
+        <span class="intro__list intro__span-accent">16</span>
       </p>
-      <p class="intro__list">Природных заповедников <span class="intro__list intro__list_numb">105</span></p>
-      <p class="intro__list">Аэропортов <span class="intro__list intro__list_numb">241</span></p>
+      <p class="intro__list">Природных заповедников <span class="intro__list intro__span-accent">105</span></p>
+      <p class="intro__list">Аэропортов <span class="intro__list intro__span-accent">241</span></p>
     </section>
     <section class="photo-grid">
-      <div class="photo-grid__item">
-        <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo-grid__image">
-        <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__image">
-      </div>
+      <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Атхарва-Тулси" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-arisa.jpg" alt="Ариса" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка-1" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка-2" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал-2" class="photo-grid__image">
+      <img src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__image">
     </section>
-    <article class="places">
-      <h2 class="places__title">Куршская коса</h2>
-      <div class="places__website">
-        <p class="places__website places__website places__website_url-heading">url</p>
-        <a class="places__website places__website places__website_link" href="http://park-kosa.ru"
-          target="_blank">park-kosa.ru</a>
-      </div>
-      <img src="./images/places/place-kosa.jpg" alt="Куршская коса" class="places__image">
-      <div>
-        <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
-          спокойного Куршского залива
-          с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
-          российского анклава. </p>
-        <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
-          исследователя там же по соседству —
-          самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
-          Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
-        </p>
-      </div>
-    </article>
-    <article class="places">
-      <h2 class="places__title">Кольский</h2>
-      <div class="places__website">
-        <p class="places__website places__website_url-heading">url</p>
-        <a class="places__website places__website_link"
-          href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National
-          Geographic</a>
-      </div>
-      <img src="./images/places/place-kolsky.jpg" alt="Кольский" class="places__image">
-      <div>
-        <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
-          на юг — тайга, а на север —
-          Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-        <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
-          Териберке. Возможно, слово
-          «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
-          пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
-          увидеть северное сияние начинает сбываться с билетом
-          в Мурманск.</p>
-      </div>
-    </article>
-    <article class="places">
-      <h2 class="places__title">Алтай</h2>
-      <div class="places__website">
-        <p class="places__website places__website_url-heading">url</p>
-        <a class="places__website places__website_link"
-          href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
-      </div>
-      <img src="./images/places/place-altai.jpg" alt="Алтай" class="places__image">
-      <div>
-        <p class="places__paragraph">Алтай — одно из красивейших мест в России.
-          В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
-          озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
-          воздухом.</p>
-        <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
-          всё разнообразие местной
-          флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И
-          знаменитые манулы — тоже обитатели Алтайского края.</p>
-      </div>
-    </article>
-    <article class="places">
-      <h2 class="places__title">Зимний Байкал</h2>
-      <div class="places__website">
-        <p class="places__website places__website_url-heading">url</p>
-        <a class="places__website places__website_link" href="https://vk.com/baikalmile"
-          target="_blank">https://vk.com/baikalmile</a>
-      </div>
-      <img src="./images/places/place-winter-baikal.jpg" alt="Зимний Байкал" class="places__image">
-      <div>
-        <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро
-          в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
-        </p>
-        <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
-          скийорингу. Это такой вид спорта,
-          когда лыжник привязывает себя
-          к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
-          «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
-      </div>
-    </article>
-    <article class="places">
-      <h2 class="places__title">Карелия</h2>
-      <div class="places__website">
-        <p class="places__website places__website places__website_url-heading">url</p>
-        <a class="places__website places__website_link" href="http://vodlozero.ru"
-          target="_blank">http://vodlozero.ru/</a>
-      </div>
-      <img src="./images/places/place-karelia.jpg" alt="Карелия" class="places__image">
-      <div>
-        <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
-          лиственница не растёт западнее
-          Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
-          болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
-          существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-          В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-          в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-      </div>
-    </article>
+    <section class="places">
+      <article class="place">
+        <h2 class="place__title">Куршская коса</h2>
+        <div class="place__website">
+          <p class="place__website place__url">url</p>
+          <a class=" place__website place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+        </div>
+        <img src="./images/places/place-kosa.jpg" alt="Куршская коса" class="place__image">
+        <div>
+          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+            спокойного Куршского залива
+            с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
+            российского анклава. </p>
+          <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
+            исследователя там же по соседству —
+            самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
+            Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+          </p>
+        </div>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Кольский</h2>
+        <div class="place__website">
+          <p class="place__website place__url">url</p>
+          <a class="place__website place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+            target="_blank">National
+            Geographic</a>
+        </div>
+        <img src="./images/places/place-kolsky.jpg" alt="Кольский" class="place__image">
+        <div>
+          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
+            на юг — тайга, а на север —
+            Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+            Териберке. Возможно, слово
+            «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
+            пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
+            увидеть северное сияние начинает сбываться с билетом
+            в Мурманск.</p>
+        </div>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Алтай</h2>
+        <div class="place__website">
+          <p class="place__website place__url">url</p>
+          <a class="place__website place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+            target="_blank">Facebook</a>
+        </div>
+        <img src="./images/places/place-altai.jpg" alt="Алтай" class="place__image">
+        <div>
+          <p class="place__paragraph">Алтай — одно из красивейших мест в России.
+            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+            озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+            воздухом.</p>
+          <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+            всё разнообразие местной
+            флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И
+            знаменитые манулы — тоже обитатели Алтайского края.</p>
+        </div>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Зимний Байкал</h2>
+        <div class="place__website">
+          <p class="place__website place__url">url</p>
+          <a class="place__website place__link" href="https://vk.com/baikalmile"
+            target="_blank">https://vk.com/baikalmile</a>
+        </div>
+        <img src="./images/places/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
+        <div>
+          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
+            в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+          </p>
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+            скийорингу. Это такой вид спорта,
+            когда лыжник привязывает себя
+            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+            «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+        </div>
+      </article>
+      <article class="place">
+        <h2 class="place__title">Карелия</h2>
+        <div class="place__website">
+          <p class="place__website place__website place__url">url</p>
+          <a class="place__website place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+        </div>
+        <img src="./images/places/place-karelia.jpg" alt="Карелия" class="place__image">
+        <div>
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+            лиственница не растёт западнее
+            Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
+            болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
+            существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+        </div>
+      </article>
+    </section>
     <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
@@ -164,12 +162,12 @@
   </main>
   <footer class="footer">
     <nav>
-      <ul class="footer__menu-link">
-        <li><a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a></li>
-        <li><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
-        <li><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
-        <li><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
-        <li><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествие</a></li>
+      <ul class="footer__menu ">
+        <li class="footer__menu_item"><a href="https://yandex.ru/maps" class="footer__link " target="_blank">Карты</a></li>
+        <li class="footer__menu_item"><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
+        <li class="footer__menu_item"><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
+        <li class="footer__menu_item"><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
+        <li class="footer__menu_item"><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествие</a></li>
       </ul>
     </nav>
     <p class="footer__copyright">&copy;2022 Мильват Кирилл</p>
