--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
         мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
         стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-      <p class="intro__list">Часовых поясов <span class="intro__list intro__span-accent">11</span></p>
+      <p class="intro__list">Часовых поясов <span class="intro__span-accent">11</span></p>
       <p class="intro__list">Объектов природного наследия <span
-          class="intro__list intro__list_up-case">ЮНЕСКО</span><span class="intro__list intro__span-accent"> 12</span>
+          class="intro__list intro__list_up-case">ЮНЕСКО</span><span class="intro__span-accent"> 12</span>
       </p>
-      <p class="intro__list">Объектов культурного наследия <span class="intro__list intro__list_up-case">ЮНЕСКО</span>
-        <span class="intro__list intro__span-accent">16</span>
+      <p class="intro__list">Объектов культурного наследия <span class="intro__list_up-case">ЮНЕСКО</span>
+        <span class=" intro__span-accent">16</span>
       </p>
-      <p class="intro__list">Природных заповедников <span class="intro__list intro__span-accent">105</span></p>
-      <p class="intro__list">Аэропортов <span class="intro__list intro__span-accent">241</span></p>
+      <p class="intro__list">Природных заповедников <span class="intro__span-accent">105</span></p>
+      <p class="intro__list">Аэропортов <span class="intro__span-accent">241</span></p>
     </section>
     <section class="photo-grid">
       <img src="./images/photo-grid/photo-grid-train.jpg" alt="Вид из поезда" class="photo-grid__image">
@@ -59,8 +59,8 @@
       <article class="place">
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
-          <p class="place__website place__url">url</p>
-          <a class=" place__website place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+          <p class="place__url">url</p>
+          <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
         </div>
         <img src="./images/places/place-kosa.jpg" alt="Куршская коса" class="place__image">
         <div>
@@ -78,8 +78,8 @@
       <article class="place">
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
-          <p class="place__website place__url">url</p>
-          <a class="place__website place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+          <p class="place__url">url</p>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
             target="_blank">National
             Geographic</a>
         </div>
@@ -99,8 +99,8 @@
       <article class="place">
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
-          <p class="place__website place__url">url</p>
-          <a class="place__website place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+          <p class="place__url">url</p>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
             target="_blank">Facebook</a>
         </div>
         <img src="./images/places/place-altai.jpg" alt="Алтай" class="place__image">
@@ -118,8 +118,8 @@
       <article class="place">
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
-          <p class="place__website place__url">url</p>
-          <a class="place__website place__link" href="https://vk.com/baikalmile"
+          <p class="place__url">url</p>
+          <a class="place__link" href="https://vk.com/baikalmile"
             target="_blank">https://vk.com/baikalmile</a>
         </div>
         <img src="./images/places/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
@@ -137,8 +137,8 @@
       <article class="place">
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
-          <p class="place__website place__website place__url">url</p>
-          <a class="place__website place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+          <p class="place__website place__url">url</p>
+          <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
         </div>
         <img src="./images/places/place-karelia.jpg" alt="Карелия" class="place__image">
         <div>
@@ -163,11 +163,16 @@
   <footer class="footer">
     <nav>
       <ul class="footer__menu">
-        <li class="footer__menu footer__menu_item"><a href="https://yandex.ru/maps" class="footer__link " target="_blank">Карты</a></li>
-        <li class="footer__menu footer__menu_item"><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
-        <li class="footer__menu footer__menu_item"><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
-        <li class="footer__menu footer__menu_item"><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
-        <li class="footer__menu footer__menu_item"><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествие</a></li>
+        <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link "
+            target="_blank">Карты</a></li>
+        <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link"
+            target="_blank">Погода</a></li>
+        <li class=" footer__item"><a href="https://rasp.yandex.ru" class="footer__link"
+            target="_blank">Расписание</a></li>
+        <li class=" footer__item"><a href="https://calendar.yandex.ru" class="footer__link"
+            target="_blank">Календарь</a></li>
+        <li class=" footer__item"><a href="https://travel.yandex.ru" class="footer__link"
+            target="_blank">Путешествие</a></li>
       </ul>
     </nav>
     <p class="footer__copyright">&copy;2022 Мильват Кирилл</p>
